[project]
name = "cwe-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.13",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openai>=1.91.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.9.0",
]
